src-ken&y/objects/Cart_Line__c.object
<CustomObject>
    <description>Individual item in a shopping cart.</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tax Amount for the cart line if it is taxable.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Cart Line</label>
    <nameField>
        <label>SC Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Lines</pluralLabel>
    <recordTypes>
        <fullName>Catalog</fullName>
        <active>true</active>
        <description>For items approved in the catalog</description>
        <label>Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Item</fullName>
        <active>true</active>
        <description>Item that needs to be clarified by the buyer before being approved for PO</description>
        <label>Request Item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>